@@ -10,12 +10,13 @@ import be.vlaanderen.informatievlaanderen.ldes.ldio.config.PipelineConfig;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.configurator.LdioConfigurator;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.configurator.LdioInputConfigurator;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.configurator.LdioTransformerConfigurator;
-import be.vlaanderen.informatievlaanderen.ldes.ldio.events.InputCreatedEvent;
-import be.vlaanderen.informatievlaanderen.ldes.ldio.events.SenderCreatedEvent;
+import be.vlaanderen.informatievlaanderen.ldes.ldio.events.PipelineCreatedEvent;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.exception.InvalidComponentException;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.exception.InvalidPipelineNameException;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.exception.LdiAdapterMissingException;
+import be.vlaanderen.informatievlaanderen.ldes.ldio.statusmanagement.PipelineStatusManager;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.types.LdioInput;
+import be.vlaanderen.informatievlaanderen.ldes.ldio.types.LdioStatusOutput;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.types.LdioTransformer;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.valueobjects.ComponentDefinition;
 import be.vlaanderen.informatievlaanderen.ldes.ldio.valueobjects.ComponentProperties;
@@ -71,32 +72,36 @@ public class PipelineCreatorService {
 			Map<String, String> inputConfig = new HashMap<>(config.getInput().getConfig().getConfig());
 			inputConfig.put(ORCHESTRATOR_NAME, orchestratorName);
 
-			verifyAdapter(config, configurator);
+			verifyAdapter(config, configurator.isAdapterRequired());
 
-			LdioInput ldiInput = configurator.configure(adapter, executor, eventPublisher, new ComponentProperties(pipeLineName, inputName, inputConfig));
+			LdioInput ldioInput = configurator.configure(adapter, executor, new ComponentProperties(pipeLineName, inputName, inputConfig));
+			registerBean(pipeLineName, ldioInput);
 
-			registerBean(pipeLineName, ldiInput);
-			eventPublisher.publishEvent(new InputCreatedEvent(config.getName(), ldiInput));
+			List<LdioStatusOutput> ldioStatusOutputs = getLdioOutputs(config).stream()
+					.filter(LdioStatusOutput.class::isInstance)
+					.map(LdioStatusOutput.class::cast)
+					.toList();
+
+			final var pipelineStatusManager = PipelineStatusManager.initializeWithStatus(pipeLineName, ldioInput, ldioStatusOutputs, configurator.getInitialPipelineStatus());
+			eventPublisher.publishEvent(new PipelineCreatedEvent(pipelineStatusManager));
 		} catch (NoSuchBeanDefinitionException e) {
 			throw new InvalidComponentException(config.getName(), e.getBeanName());
 		}
 	}
 
-	private static void verifyAdapter(PipelineConfig config, LdioInputConfigurator configurator) {
+	private static void verifyAdapter(PipelineConfig config, boolean isAdapterRequired) {
 		final ComponentDefinition adapter = config.getInput().getAdapter();
-		if(configurator.isAdapterRequired() && adapter == null) {
+		if (isAdapterRequired && adapter == null) {
 			throw new LdiAdapterMissingException(config.getName(), config.getInput().getName());
 		}
-		if(!configurator.isAdapterRequired() && adapter != null) {
-			log.warn("Pipeline \"{}\": Input: \"{}\": \"{}\" ignored", config.getName(), config.getInput().getName(), adapter.getName());
+		if (!isAdapterRequired && adapter != null) {
+			final String regex = "[\n\r]";
+			final String replacement = "_";
+			final String pipelineName = config.getName().replaceAll(regex, replacement);
+			final String inputName = config.getInput().getName().replaceAll(regex, replacement);
+			final String adapterName = adapter.getName().replaceAll(regex, replacement);
+			log.warn("Pipeline \"{}\": Input: \"{}\": \"{}\" ignored", pipelineName, inputName, adapterName);
 		}
-	}
-
-	public void removePipeline(String pipeline) {
-		DefaultListableBeanFactory beanRegistry = (DefaultListableBeanFactory) configContext.getBeanFactory();
-		LdioInput ldioInput = (LdioInput) beanRegistry.getBean(pipeline);
-		ldioInput.shutdown();
-		beanFactory.destroyBean(pipeline);
 	}
 
 	private ComponentExecutor componentExecutor(final PipelineConfig pipelineConfig) {
@@ -105,11 +110,7 @@ public class PipelineCreatorService {
 				.map(this::getLdioTransformer)
 				.toList();
 
-		List<LdiOutput> ldiOutputs = pipelineConfig.getOutputs()
-				.stream()
-				.map(componentDefinition -> addPipelineNameIfMissingToComponentDefinition(componentDefinition, pipelineConfig.getName()))
-				.map(this::getLdioOutput)
-				.toList();
+		List<LdiOutput> ldiOutputs = getLdioOutputs(pipelineConfig);
 
 		LdioSender ldioSender = new LdioSender(pipelineConfig.getName(), ldiOutputs);
 
@@ -117,15 +118,14 @@ public class PipelineCreatorService {
 
 		processorChain.add(ldioSender);
 
-		LdioTransformer ldioTransformerPipeline = processorChain.get(0);
+		LdioTransformer ldioTransformerPipeline = processorChain.getFirst();
 
 		if (processorChain.size() > 1) {
-			ldioTransformerPipeline = LdioTransformer.link(processorChain.get(0), processorChain);
+			ldioTransformerPipeline = LdioTransformer.link(processorChain.getFirst(), processorChain);
 		}
 
 		registerBean(pipelineConfig.getName() + "-ldiSender", ldioSender);
 
-		eventPublisher.publishEvent(new SenderCreatedEvent(pipelineConfig.getName(), ldioSender));
 
 		return new ComponentExecutorImpl(ldioTransformerPipeline);
 	}
@@ -147,6 +147,14 @@ public class PipelineCreatorService {
 				.configure(componentDefinition.getConfig());
 
 		return debug ? new TransformerDebugger(ldiTransformer) : ldiTransformer;
+	}
+
+	private List<LdiOutput> getLdioOutputs(PipelineConfig pipelineConfig) {
+		return pipelineConfig.getOutputs()
+				.stream()
+				.map(componentDefinition -> addPipelineNameIfMissingToComponentDefinition(componentDefinition, pipelineConfig.getName()))
+				.map(this::getLdioOutput)
+				.toList();
 	}
 
 	private LdiOutput getLdioOutput(ComponentDefinition componentDefinition) {
